make few changes

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 APIkey=AIzaSyCVyAuztulPhUTKsskORtZI6RmsLl5TWlk
+MongoURI=mongodb+srv://2202vartikavsh:vart987654321@cluster0.vu5eoiq.mongodb.net/?retryWrites=true&w=majority
